Added checkmark functionality

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -85,6 +85,10 @@ body {
         display: flex;
     }
 
+    #check:hover {
+        cursor: pointer;
+    }
+
     #delete {
         margin-left: auto;
     }
